--- a/index.html
+++ b/index.html
@@ -33,8 +33,27 @@
 				width: 100%;
 				height: 100%;
 			}
+			#Logo {
+				display: block;
+				margin: 1em auto 0;
+				width: 75%;
+			}
 		</style>
 		<script>
+			$(document).delegate("#main_page", "pageshow", function() {
+				// var height = $(document).height();
+				// var imageHeight = $('#Logo').height();
+				// console.log(height);
+				// console.log(imageHeight);
+				// $('#Logo').css({
+				// "position" : "relative",
+				// "top" : height / 2 - imageHeight / 2
+				// })
+				$('#Logo').css({
+					"position" : "relative",
+					"top" : 130
+				})
+			});
 			// $(document).delegate("#map_page", "pageinit", function() {
 			//
 			// console.log("initilisierung erfolgt...");
@@ -71,8 +90,8 @@
 			});
 
 			// $(document).bind('pageinit', function() {
-				// $(".ui-content").css('margin-bottom', $('.foot_class').height());
-				// console.log($(".ui-content").css('margin-bottom', $('.foot_class').height()));
+			// $(".ui-content").css('margin-bottom', $('.foot_class').height());
+			// console.log($(".ui-content").css('margin-bottom', $('.foot_class').height()));
 			// })
 		</script>
 
@@ -84,6 +103,12 @@
 				<a href="#main_page" data-transition="none" data-direction="reverse" data-role= "button">Start</a>
 				<h1>SCS Wien App</h1>
 			</div>
+			<div data-role="content">
+				<div class="container_img">
+					<img id="Logo" src="images/logo.png">
+				</div>
+			</div>
+
 			<div id="foot" data-role="footer" class="foot_class" data-position="fixed">
 
 				<div data-role="navbar" data-icon="star" >
